DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Sep-19-2007 patrick     Added draw thread CPU affinity capabilities through the
                        new environment variable VJ_DRAW_THREAD_AFFINITY. This
                        is currently used only by the OpenGL Draw Manager.
                        NEW VERSION: 2.3.14
Sep-09-2007 patrick     Added vrjuggler-direct3d fpc file.
Sep-07-2007 dshipton    Added vrjuggler-opengl and vrjuggler-performer fpc
                        files for easier Draw Manager selection by application
                        builds.
Sep-04-2007 patrick     Use new environment variable VJ_DATA_DIR as a way to
                        look up files in VJ_BASE_DIR/share/vrjuggler.
                        NEW VERSION: 2.3.13
Sep-04-2007 patrick     Set VJ_BASE_DIR automatically on all platforms.
Aug-25-2007 patrick     Changed the return type of the virtual method
                        vrj::osg::App::getSceneViewDefaults() from
                        osgUtil::SceneView::Options to unsigned int to fix
                        compile errors.
                        NEW VERSION: 2.3.12
Jul-08-2007 patrick     Code in the Draw Manager implementations is now in a
                        namespace specific to each implementation, and the
                        classes contained therein no longer have the Draw
                        Manager abbreviation at the start of their name. The
                        namespaces are vrj::opengl (vrj/Draw/OpenGL), vrj::osg
                        (vrj/Draw/OSG), vrj::opensg (vrj/Draw/OpenSG), vrj::pf
                        (vrj/Draw/Pf), and vrj::direct3d (vrj/Draw/Performer).
                        NEW VERSION: 2.3.11
Jul-08-2007 patrick     Debug-enabled code linked against the release runtime
                        on Windows is now named the same as optimized code.
                        The debug DLLs are installed in the "debug"